--- a/zeroConnecTo/2022-07-27/2022-07-27.md
+++ b/zeroConnecTo/2022-07-27/2022-07-27.md
@@ -197,9 +197,9 @@
 ## 오늘 풀어본 알고리즘 문제
 
 - leetcode
-  [2351. First Letter to Appear Twice](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/2351.%20First%20Letter%20to%20Appear%20Twice.js)
-  [283. Move Zeroes](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/283.%20Move%20Zeroes.js)
-  [315. Count of Smaller Numbers After Self](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/315.%20Count%20of%20Smaller%20Numbers%20After%20Self.js)
+  - [2351. First Letter to Appear Twice](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/2351.%20First%20Letter%20to%20Appear%20Twice.js)
+  - [283. Move Zeroes](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/283.%20Move%20Zeroes.js)
+  - [315. Count of Smaller Numbers After Self](https://github.com/SleeplessN/problem-solving/blob/main/leetcode/315.%20Count%20of%20Smaller%20Numbers%20After%20Self.js)
 
 ## 느낀점
 
