--- a/zeroConnecTo/2022-08-02/2022-08-02.md
+++ b/zeroConnecTo/2022-08-02/2022-08-02.md
@@ -4,8 +4,6 @@
 
 ### 브라우저 렌더링
 
-<img src="./2022-08-02-images/Untitled.png" width="400">
-
 - 네트워크로 받은 HTML을 한 줄 한 줄 읽는다. (HTML Parsing)
 - 파싱하다 css `<link>` 태그와 `<script>` 태그를 만났을 시 파싱을 멈추고 css, javascript 를 다운받고 읽는다.
 - 읽은 내용으로부터 HTML → DOM / CSS → CSSOM 을 형성
@@ -26,16 +24,12 @@
 - 브라우저에 최초에 한번 페이지 전체를 로드하고, 이후부터는 특정 부분만 Ajax를 통해 데이터를 바인딩하는 방식이다.
 - 단일 페이지 어플리케이션(SPA)는 현재 웹개발의 트랜드로 볼 수 있고, 우리가 배운 react와 vue, 앵귤러와 같은 자바스크립트 프레임워크등이 spa의 방식을 가지고 있다.
 
-    <img src="./2022-08-02-images/Untitled%201.png" width="400">
-
 ### SSR vs CSR
 
 1. **SSR (Single Side Rendering)**
 
 - **서버로부터 완전하게 만들어진 html 파일을 받아와 페이지 전체를 렌더링 하는 방식**
 - 서버는 화면에 표시하는데 필요한 데이터를 얻어와 모두 삽입하고 css 까지 모두 적용해서 렌더링 준비를 마친 HTML과 JS코드를 브라우저에 응답으로 전달한다
-
-    <img src="./2022-08-02-images/Untitled%202.png" width="400">
 
 - 해당 페이지 필요한 부분의 파일만 받아오기 때문에, 첫 페이지 로딩이 빠르다. 하지만 나머지 페이지 경우에도 계속해서 필요한 부분의 파일을 받고 렌더링해야 하므로 느린 편이다.
 - 사용권장
@@ -49,8 +43,8 @@
 
 - **클라이언트 사이드 렌더링 이란 사용자의 요청에 따라 필요한 부분만 응답 받아 렌더링 하는 방식**
 - **클라이언트에서 초기화면을 로드하기 위해 서버에 요청을 보낸다**
-  ⇒그럼 **서버 는 화면에 표시하는 데 필요한 완전한 리소스의 응답**한다.
-  <img src="./2022-08-02-images/Untitled%203.png" width="400">
+  ⇒ **서버 는 화면에 표시하는 데 필요한 완전한 리소스의 응답**한다.
+
 - 서버로부터 모든 파일을 받아오기 때문에 첫 페이지 로딩 속도는 느린 편이지만, 이미 모든 파일을 받았기 때문에 나머지 페이지 로딩 속도는 빠르다.
 - 사용권장
   - 네트워크가 빠를 때
