--- a/zeroConnecTo/2022-08-02/2022-08-02.md
+++ b/zeroConnecTo/2022-08-02/2022-08-02.md
@@ -4,6 +4,8 @@
 
 ### 브라우저 렌더링
 
+<img src="./2022-08-02-images/Untitled.png" width="500">
+
 - 네트워크로 받은 HTML을 한 줄 한 줄 읽는다. (HTML Parsing)
 - 파싱하다 css `<link>` 태그와 `<script>` 태그를 만났을 시 파싱을 멈추고 css, javascript 를 다운받고 읽는다.
 - 읽은 내용으로부터 HTML → DOM / CSS → CSSOM 을 형성
