--- a/zeroConnecTo/2022-08-09/2022-08-09.md
+++ b/zeroConnecTo/2022-08-09/2022-08-09.md
@@ -6,27 +6,25 @@
 - 그렇다면 좋은 코드란 무엇인가? 남들이 보았을 때도 이해할 수 있는 코드?
 - 좋은 프로그래머란 좋은 코드를 작성하는 것, 좋은 코드를 작성하려고 평생을 노력하는 것
 - 프런트엔드 개발자가 하는 일
-    - 애플리케이션을 사용하는 사람(유저)가 애플리케이션과 소통하기 위한 창구(UI)를 사용하기 좋게 구현한다.
-    - UX를 고려해야한다.
-    - 사용자가 입력한 데이터를 객체로 만들고
+  - 애플리케이션을 사용하는 사람(유저)가 애플리케이션과 소통하기 위한 창구(UI)를 사용하기 좋게 구현한다.
+  - UX를 고려해야한다.
+  - 사용자가 입력한 데이터를 객체로 만들고
 - 커뮤니케이션 능력 ( 원하는 것을 잘 설명하는 것이 중요 )
 - 협업을 잘한다? ⇒ 커뮤니케이션 능력과 공동의 목표를 위해서 내가 ‘무엇을’ 해야하는지 알아야한다.
-    
-    협업… 쉽고도 어렵다
-    
+  협업… 쉽고도 어렵다
 - “~겠지..?”를 조심하자!
 - 기본적인 용어 숙지, 네이밍을 잘해야 한다.(나중에 고칠려고 했어요(게으름))
 - 더 배우려 하지 않는 태도를 버리자
 - 프론트엔드 개발에 필요한 기술
-    - HTML
-    - CSS
-    - 크로스 브라우징 고려(caniuse 사용 습관)
-    - Javascriopt
-    - HTTP
-    - Tools, Git, Webpack, Babel, ESLint, npm …
-    - Library, Framework : SPA(Angular, React, Vue.js) TypeScript, jQuery, Lodash,Axios …
-    - TDD(Test Driven Development) : karma / jasmine, mocha, chai
-    - 알고리즘 / 자료구조
+  - HTML
+  - CSS
+  - 크로스 브라우징 고려(caniuse 사용 습관)
+  - Javascriopt
+  - HTTP
+  - Tools, Git, Webpack, Babel, ESLint, npm …
+  - Library, Framework : SPA(Angular, React, Vue.js) TypeScript, jQuery, Lodash,Axios …
+  - TDD(Test Driven Development) : karma / jasmine, mocha, chai
+  - 알고리즘 / 자료구조
 - for문만 쓰는게 아닌 forEach, for of, for in 등등도 다 순회를 하는 방법인데 상황에 맞게 어떤 것을 써야할지 가치 판단이 중요하다 ⇒ 이는 좋은 코드를 만든다
 - stack,queue, linked list, tree 자바스크립트 답게 만들어볼 예정
 - 프론트엔드 개발자라면 HTML을 DOM과 같이 공부를 더 해야 한다.
@@ -35,9 +33,7 @@
 - **피드백에 겸손하고 적극적으로 반응하여 행동을 교정하라 (지적)겸손함⇒ 내가 틀릴 수도 있다.**
 
 - 왜 이렇게 짰는지 질문 ⇒ 이에 대한 대답을 할 수 있어야 한다.
-    
-    (여러방법이 있을텐데 왜 그 방법을 선택했는지 얘기할 수 있어야 한다)
-    
+  (여러방법이 있을텐데 왜 그 방법을 선택했는지 얘기할 수 있어야 한다)
 
 ## 오늘 풀어본 알고리즘 문제
 
@@ -52,3 +48,4 @@
 ## 느낀점
 
 - 오늘 Javascript 배우기 전 OT를 진행하였는데, 좋은 프로그래머가 되기 위한 안 좋은 습관에 대해서 찔린 부분도 있었고 한편으로는 이를 보완해서 좋은 프로그래머가 되어야 겠다는 생각이 들었다. 좋은 프로그래머가 되기 위해서는 그냥 막연하게 ‘좋은 코드를 작성한다’가 아닌, 이 좋은 코드를 작성하기 위해 평생을 노력한다는 말이 너무 감명깊었다. 또한 코드를 잘 짜는 것도 중요하지만 커뮤니케이션 능력과 본인이 ‘무엇을'해야 하는지의 협업에 대해서도 너무나도 공감이 되었다.
+- **"효율적인 방법은 없다. 의식적인 연습과 반복을 통해 성장"** 을 기억하자!!
