--- a/Javascript/Javascript DeepDive/9장 타입 변환과 단축 평가.md
+++ b/Javascript/Javascript DeepDive/9장 타입 변환과 단축 평가.md
@@ -3,110 +3,120 @@
 ## 타입 변환
 
 > 기존 원시 값을 사용해 **다른 타입의 새로운 원시 값을 생성**하는 것
+> 
 
 ### 명시적 타입 변환 (타입 캐스팅)
 
 > 개발자가 **의도적으로** 값의 타입을 변환하는 것
+> 
 
 ```jsx
 var x = 10;
 
-var str = x.toString(); // typeof str : string
+var str = x.toString() // typeof str : string
 // typeof x : number (원본 x의 타입은 변경되지 않는다)
 ```
 
 1. 문자열 타입으로 변환
-
-   ```jsx
-   // 1. String 생성자 함수
-   String(1); // '1'
-
-   // 2. Object.prototype.toString() 사용
-   (1).toString(); // '1'
-
-   // 3. 문자열 연결 연산자를 이용
-   1 + ""; // '1'
-   ```
+    
+    ```jsx
+    // 1. String 생성자 함수
+    String(1); // '1'
+    
+    // 2. Object.prototype.toString() 사용
+    (1).toString() // '1'
+    
+    // 3. 문자열 연결 연산자를 이용
+    1 + '' // '1'
+    ```
+    
 
 1. 숫자 타입으로 변환
-
-   ```jsx
-   // 1. Number 생성자 함수
-   Number("1"); // 1
-
-   // 2. parseInt, parseFloat 함수 사용
-   parseInt("1"); // 1
-   parseFloat("10.53") + // 10.53
-     // 3. + 단항 산술 연산자를 이용
-     "1"; // 1
-
-   // 4. * 산술 연산자를 이용
-   "10.53" * 1; // 10.53
-   ```
+    
+    ```jsx
+    // 1. Number 생성자 함수
+    Number('1') // 1
+    
+    // 2. parseInt, parseFloat 함수 사용
+    parseInt('1') // 1
+    parseFloat('10.53') // 10.53
+    
+    // 3. + 단항 산술 연산자를 이용
+    +'1' // 1
+    
+    // 4. * 산술 연산자를 이용
+    '10.53' * 1 // 10.53
+    ```
+    
 
 1. 불리언 타입으로 변환
-
-   ```jsx
-   // 1. Boolean 생성자 함수
-   Boolean(0); // false
-   Boolean(1); // true
-   Boolean([]); // true
-
-   // 2. ! 부정 논리 연산자를 두 번 사용
-   !!1; // true
-   ```
+    
+    ```jsx
+    // 1. Boolean 생성자 함수
+    Boolean(0) // false
+    Boolean(1) // true
+    Boolean([]) // true
+    
+    // 2. ! 부정 논리 연산자를 두 번 사용
+    !!1 // true
+    ```
+    
 
 ### 암묵적 타입 변환 (타입 강제 변환)
 
 > **개발자의 의도와는 상관없이** 표현식을 평가하는 도중에 자바스크립트 엔진에 의해 **타입이 자동으로 변환되는 것**
+> 
 
 1. 문자열 타입으로 변환
-
-   ```jsx
-   1 + "2"; // '12'
-   ```
-
-   - 단항 연산자(`+`)는 문자열이 하나 이상이면 문자열로 만든다 (즉, 문자열 연결 연산자로 동작)
-
+    
+    ```jsx
+    1 + '2' // '12'
+    ```
+    
+    - 단항 연산자(`+`)는 문자열이 하나 이상이면 문자열로 만든다 (즉, 문자열 연결 연산자로 동작)
+    
 2. 숫자 타입으로 변환
-
-   ```jsx
-   1 - "1"; // 0
-   1 * "10"; // 10
-   1 / "one"; // NaN
-   ```
-
-   - 산술 연산자 ( `-` , `*` , `/` )의 경우 숫자 값을 만든다.
-
+    
+    ```jsx
+    1 - '1' // 0
+    1 * '10' // 10
+    1 / 'one' // NaN
+    ```
+    
+    - 산술 연산자 ( `-` , `*` , `/` )의 경우 숫자 값을 만든다.
+    
 3. 불리언 타입으로 변환
-
-   ```jsx
-   "1" > 0; // true
-   ```
-
-   - 비교 연산자 ( `>` , `<` ), if, for문의 조건식의 경우 불리언 값을 만든다
+    
+    ```jsx
+    '1' > 0 // true
+    ```
+    
+    - 비교 연산자 ( `>` , `<` ), if, for문의 조건식의 경우 불리언 값을 만든다
+    
 
 ### 참고) `[]` 의 경우
 
 ```jsx
 // 숫자 타입으로 바꾸었을 경우 0을 출력하지만
-+[]; // 0
++[] // 0
 
 // 불리언 타입으로 바꾸었을 경우 0이 들어가서 false를 출력할 것 같지만..?
 // true 로 출력된다..!
-if ([]) console.log(true); // true
+if([]) console.log(true) // true
 ```
 
 > ‼️ 자신이 작성한 코드에서 암묵적 타입 변환이 일어나는지, 어떤 타입으로 변환되는지, 결론적으로 어떻게 평가될 것인지 예측 가능해야 한다.
+> 
 
 ## 단축 평가
 
 > 단축 평가는 표현식을 평가하는 도중에 평가 결과가 확정된 경우 나머지 평가 과정을 생략하는 것을 말한다.
+> 
 
-| 단축 평가 표현식                        | 평가 결과 |                                                                                     |
-| --------------------------------------- | --------- | ----------------------------------------------------------------------------------- | -------- | ---------------------------------------- |
-| true `                                  |           | ` anything                                                                          | true     | 앞이 true 면 true를 출력                 |
-| false `                                 |           | ` anything                                                                          | anything | 앞이 false 면 뒤를 출력 (뒤의 값에 의존) |
-| true `&&` anything                      | anything  | 앞이 true 면 뒤를 출력 (뒤의 값에 의존)                                             |
-| false `&&` anything                     | false     | 앞이 false 면 false를 출력                                                          |
-| - 논리곱 연산자(`&&`)와 논리합 연산자(` |           | `)는 논리 연산의 결과를 결정하는 피연산자를 **타입 변환하지 않고 그대로 반환한다.** |
+| 단축 평가 표현식 | 평가 결과 |  |
+| --- | --- | --- |
+| true || anything | true | 앞이 true 면 true를 출력 |
+| false || anything | anything | 앞이 false 면 뒤를 출력 (뒤의 값에 의존) |
+| true && anything | anything | 앞이 true 면 뒤를 출력 (뒤의 값에 의존) |
+| false && anything | false | 앞이 false 면 false를 출력 |
+- 논리곱 연산자(`&&`)와 논리합 연산자(`||`)는 논리 연산의 결과를 결정하는 피연산자를 **타입 변환하지 않고 그대로 반환한다.**
