--- a/Javascript/Javascript DeepDive/9장 타입 변환과 단축 평가.md
+++ b/Javascript/Javascript DeepDive/9장 타입 변환과 단축 평가.md
@@ -115,8 +115,8 @@ if([]) console.log(true) // true
 
 | 단축 평가 표현식 | 평가 결과 |  |
 | --- | --- | --- |
-| true `| |` anything | true | 앞이 true 면 true를 출력 |
-| false `| |` anything | anything | 앞이 false 면 뒤를 출력 (뒤의 값에 의존) |
-| true `&&` anything | anything | 앞이 true 면 뒤를 출력 (뒤의 값에 의존) |
-| false `&&` anything | false | 앞이 false 면 false를 출력 |
+| true \|\| anything | true | 앞이 true 면 true를 출력 |
+| false \|\| anything | anything | 앞이 false 면 뒤를 출력 (뒤의 값에 의존) |
+| true && anything | anything | 앞이 true 면 뒤를 출력 (뒤의 값에 의존) |
+| false && anything | false | 앞이 false 면 false를 출력 |
 - 논리곱 연산자(`&&`)와 논리합 연산자(`||`)는 논리 연산의 결과를 결정하는 피연산자를 **타입 변환하지 않고 그대로 반환한다.**
