--- a/zeroConnecTo/2022-08-17/2022-08-17.md
+++ b/zeroConnecTo/2022-08-17/2022-08-17.md
@@ -9,9 +9,9 @@
 ### Git
 
 - 지난 팀프로젝트 회고 (3L 전략)
-    - liked : issue를 통해 내가 정확히 무엇을 해야하고 PR을 통해 코드 리뷰를 하여 체계적이고 안전하게 협업하는 부분이 좋았습니다.
-    - Learned : 실제 프로젝트를 통해 git flow을 실제로 경험해보았습니다.
-    - Lacked : 아직까진 경험이 부족하여 미숙한데 많은 연습이 필요한 것 같습니다.
+  - liked : issue를 통해 내가 정확히 무엇을 해야하고 PR을 통해 코드 리뷰를 하여 체계적이고 안전하게 협업하는 부분이 좋았습니다.
+  - Learned : 실제 프로젝트를 통해 git flow을 실제로 경험해보았습니다.
+  - Lacked : 아직까진 경험이 부족하여 미숙한데 많은 연습이 필요한 것 같습니다.
 
 ### 파일 이름을 바꾸는 경우
 
@@ -38,34 +38,30 @@ $ git mv README.md unread.md
 ### 최신 커밋으로 돌아가기
 
 - 구 시대의 문법
-    
-    ```jsx
-    $ git checkout -- {filename}
-    // ex
-    $ git checkout -- unread.md
-    ```
-    
-    - `checkout`이 두 가지 역할을 했었기 때문에 `switch`와 `restore`으로 나뉘어졌다. 이제는 `switch`와 `restore`을 사용하도록하자!
+  ```jsx
+  $ git checkout -- {filename}
+  // ex
+  $ git checkout -- unread.md
+  ```
+  - `checkout`이 두 가지 역할을 했었기 때문에 `switch`와 `restore`으로 나뉘어졌다. 이제는 `switch`와 `restore`을 사용하도록하자!
 - 요즘 문법
-    
-    ```jsx
-    // unread.md 파일을 최신으로 돌리기
-    $ git restore {filename}
-    
-    // ex
-    $ git restore unread.md
-    
-    // 현재 디렉토리의 모든 파일을 최신으로 돌리기
-    $ git restore .
-    ```
-    
+  ```jsx
+  // unread.md 파일을 최신으로 돌리기
+  $ git restore {filename}
+
+  // ex
+  $ git restore unread.md
+
+  // 현재 디렉토리의 모든 파일을 최신으로 돌리기
+  $ git restore .
+  ```
 
 ### Unstage 하기 (git add 로 올린 파일 내리기)
 
 ```jsx
 $ git reset HEAD {filename}
 
-$ git resotre --staged {filename}
+$ git restore --staged {filename}
 ```
 
 - HEAD는 **해당 브랜치의 마지막 커밋**을 뜻한다
@@ -78,12 +74,14 @@ $ git commit --amend
 ```
 
 - 그 전의 commit 수정은 git rebase를 통해 하는데 안쓰는 것을 권장한다
-    - git flow 방식에 맞지 않다 (merge conflict를 계속 겪게 된다)
+  - git flow 방식에 맞지 않다 (merge conflict를 계속 겪게 된다)
 
 ### 직전의 commit 삭제
 
 1. **worst case : `reset`**
+
 - 지양한다.
+
 1. **best case : `revert`**
 
 ```jsx
@@ -103,8 +101,7 @@ $ git revert --no-commit HEAD~3..
 <img src="./2022-08-17-images/Untitled%202.png" width="600">
 
 > git revert를 또 잘못했다?
-`$ git revert --abort` : revert 작업 취소
-> 
+> `$ git revert --abort` : revert 작업 취소
 
 ---
 
