--- a/zeroConnecTo/2022-08-24/2022-08-24.md
+++ b/zeroConnecTo/2022-08-24/2022-08-24.md
@@ -2,7 +2,7 @@
 
 ## 오늘 공부한 내용
 
-### \***\*[ES6 함수의 추가 기능](https://github.com/SleeplessN/TIL/blob/main/Javascript/Javascript%20DeepDive/26%EC%9E%A5%20ES6%20%ED%95%A8%EC%88%98%EC%9D%98%20%EC%B6%94%EA%B0%80%20%EA%B8%B0%EB%8A%A5.md)\*\***
+### [ES6 함수의 추가 기능](https://github.com/SleeplessN/TIL/blob/main/Javascript/Javascript%20DeepDive/26%EC%9E%A5%20ES6%20%ED%95%A8%EC%88%98%EC%9D%98%20%EC%B6%94%EA%B0%80%20%EA%B8%B0%EB%8A%A5.md)
 
 ### [배열](https://github.com/SleeplessN/TIL/blob/main/Javascript/Javascript%20DeepDive/27%EC%9E%A5%20%EB%B0%B0%EC%97%B4.md)
 
