--- a/Javascript/Javascript DeepDive/34장 이터러블.md
+++ b/Javascript/Javascript DeepDive/34장 이터러블.md
@@ -6,14 +6,18 @@
 
 - ES6에서는 순회 가능한 데이터 컬렉션을 이터레이션 프로토콜을 준수하는 이터러블로 통일하여 for…of문, 스프레드 문법, 배열 디스트럭처링 할당의 대상으로 사용할 수 있도록 일원화했다.
 - **이터러블 프로토콜**
+  - **이터러블을 만드는 규약**
   - `Symbol.iterator`를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속 받은 `Symbol.iterator` 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. 이터러블 프로토콜을 준수한 객체를 이터러블이라 한다.
-- 이터레이터 프로토콜
+- **이터레이터 프로토콜**
+  - **이터레이터를 만드는 규약**
   - 이터러블의 Symbol.iterator 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. 이터레이터는
 
 ### 이터러블
 
-> 이터러블 프로토콜을 준수한 객체를 이터러블이라 한다.
-> 즉, **이터러블은** `Symbol.iterator`를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속받은 객체를 말한다.
+> 이터러블의 조건
+>
+> 1. **`Symbol.iterator` 를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속받은 객체**
+> 2. **`Symbol.iterator` 메서드 호출시 이터레이터를 반환**
 
 - 이터러블에 어떤 것이 있는가?
   - 배열, 문자열, Map, Set 등은 이터러블이다.
@@ -26,9 +30,12 @@
 
 ### 이터레이터
 
-- **이터러블의 `Symbol.iterator` 메서드가 반환한 이터레이터는 `next` 메서드를 갖는다.**
+> 이터레이터
+>
+> 1. (**이터러블의 `Symbol.iterator` 메서드가 반환한 이터레이터는 `next` 메서드를 갖는다.**
+> 2. **`next`** 메서드를 호출하면 이터러블을 **순차적으로** 한 단계씩 순회하며 순회 결과를 나타내는 **이터레이터 리절트 객체를 반환**한다.
+
 - 이터레이터의 next 메서드는 이터러블의 각 요소를 순회하기 위한 포인터 역할을 한다.
-- 즉, `**next` 메서드를 호출하면 이터러블을 순차적으로 한 단계씩 순회하며 순회 결과를 나타내는 이터레이터 리절트 객체를 반환한다.\*\*
 
 ```jsx
 // 배열은 이터러블 프로토콜을 준수한 이터러블이다.
@@ -60,6 +67,8 @@ console.log(iterator.next()); // { value: undefined, done: true }
 | TypedArray      | TypedArray.prototype[Symbol.iterator]                                          |
 | arguments       | arguments.prototype[Symbol.iterator]                                           |
 | DOM 컬렉션      | NodeList.prototype[Symbol.iterator], HTMLCollection.prototype[Symbol.iterator] |
+
+- 즉, 위의 빌트인은 `Symbol.iterator`를 상속받을 수 있다.
 
 ## for … of 문
 
